all ok without norm. many functions have more 25 lines

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
     "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
         "philo.h": "c"
-    }
+    },
+    "[c]": {
+        "editor.defaultFormatter": "keyhr.42-c-format"
+    },
 }
